# RaytraceVoxelEngine

./: CMakeLists.txt  Camera.cpp  Camera.h  OpenGLApp.cpp  OpenGLApp.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramHandler.cpp  ShaderProgramHandler.h  SparseVoxelOctree.cpp  Structures.h  VoxelOctree.cpp  VoxelOctree.h  VoxelTypeInformation.cpp  VoxelTypeInformation.h  VoxelWorld.cpp  VoxelWorld.h
assets/scenes/: VoxelWorldScene.cpp  VoxelWorldScene.h
assets/shader_program_handlers/: TestingShaderProgramHandler.cpp  TestingShaderProgramHandler.h
assets/voxel_type_information/: DefaultVoxelTypeInformation.csv  DefaultVoxelTypes.cpp  DefaultVoxelTypes.h
libraries/Custom/Vector3/: Vector3.h
libraries/SRombauts/: SimplexNoise.cpp  SimplexNoise.h
shaders/: OctreeRaytraceComputeShader.compshader  VoxelRaycastComputeShader.compshader
